2007-06-01 Deprecate Numeric and numarray for use as numerix. Props to
           Travis -- job well done. - ADS

2007-05-18 Added LaTeX unicode support. Enable with the
           'text.latex.unicode' rcParam. This requires the ucs and
           inputenc LaTeX packages. - ADS

2007-04-23 Fixed some problems with polar -- added general polygon
           clipping to clip the lines a nd grids to the polar axes.
           Added support for set_rmax to easily change the maximum
           radial grid.  Added support for polar legend - JDH

2007-04-16 Added Figure.autofmt_xdate to handle adjusting the bottom
           and rotating the tick labels for date plots when the ticks
           often overlap - JDH

2007-04-09 Beginnings of usetex support for pdf backend. -JKS

2007-04-07 Fixed legend/LineCollection bug. Added label support
           to collections. - EF

2007-04-06 Removed deprecated support for a float value as a gray-scale;
           now it must be a string, like '0.5'.  Added alpha kwarg to
           ColorConverter.to_rgba_list. - EF

2007-04-06 Fixed rotation of ellipses in pdf backend
           (sf bug #1690559) -JKS

2007-04-04 More matshow tweaks; documentation updates; new method
           set_bounds() for formatters and locators. - EF

2007-04-02 Fixed problem with imshow and matshow of integer arrays;
           fixed problems with changes to color autoscaling. - EF

2007-04-01 Made image color autoscaling work correctly with
           a tracking colorbar; norm.autoscale now scales
           unconditionally, while norm.autoscale_None changes
           only None-valued vmin, vmax. - EF

2007-03-31 Added a qt-based subplot-adjustment dialog - DSD

2007-03-30 Fixed a bug in backend_qt4, reported on mpl-dev - DSD

2007-03-26 Removed colorbar_classic from figure.py; fixed bug in
           Figure.clf() in which _axobservers was not getting
           cleared.  Modernization and cleanups. - EF
