@@ -1,3 +1,5 @@
+2007-06-01 Fix mathtext position in svg backend. - NN
+
 2007-06-01 Deprecate Numeric and numarray for use as numerix. Props to
            Travis -- job well done. - ADS
 
